# langchain-production-starter

./: .flake8  .gitignore  .pre-commit-config.yaml  CNAME  README.md  config.json  deploy.py  get_instance.py  index.css  index.html  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  steamship.json  test.py
.devcontainer/: devcontainer.json
data/: add_backstory.py
data/Rick/: backstory.txt
docs/: payment-telegram-bot.md  register-telegram-bot.md
homepage/: index.html
src/: __init__.py  api.py  base.py  chatbot.py  prompts.py  response_cache.py  utils.py  vectorstore.py
src/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/agent/: agent.py  base.py  get_agent.py  parser.py  prompts.py  telegram.py  usage_tracking.py  utils.py
src/agent/tools/: album_art.py  image.py  my_tool.py  reminder.py  selfie.py  speech.py  video_message.py
src/chatbot/: chatbot.py
src/personalities/: __init__.py  alix_earle.py  angele.py  jack_dawson.py  jordan_belfort.py  luna.py  makima.py  sacha.py  sandra.py
src/tools/: search.py  todo_tool.py
ui/: Chatbot.py
ui/pages/: 2_Manage.py  3_Share.py
ui/utils/: data.py  utils.py  ux.py  youtube.py
ui/utils/.streamlit/: secrets.toml
